--- a/Cover.html
+++ b/Cover.html
@@ -1,5 +1,7 @@
+<!DOCTYPE HTML>
+<html>
 <head>
-
+    <meta charset="ANSI">
 </head>
 <body>
     <h1>°_ÂI</h1>
@@ -8,6 +10,7 @@
     </a>
 
 </body>
+</html>
 <script>
 
 </script>
