--- a/Cover.html
+++ b/Cover.html
@@ -1,14 +1,13 @@
-<!DOCTYPE HTML>
+ï»¿<!DOCTYPE HTML>
 <html>
 <head>
-    <meta charset="ANSI">
+    <meta charset="utf-8">
 </head>
 <body>
-    <h1>°_ÂI</h1>
+    <h1>èµ·é»ž</h1>
     <a href="TableOfContent.html">
-        <h2>¥Ø¿ý</h2>
+        <h2>ç›®éŒ„</h2>
     </a>
-
 </body>
 </html>
 <script>
